--- a/final-react/public/style/style.css
+++ b/final-react/public/style/style.css
@@ -115,8 +115,39 @@ li {
     border-right: 1px solid #D74947;
     border-top: 1px solid #D74947;
     color: #ffffff;
+    outline: 0;
     width: 50%;
 }
+
+.search-result {
+    width: 300px;
+    height: 200px;
+    background-color: #201c19;
+    box-shadow: #201c19 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.search-result .data-item {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: #D9CECA;
+}
+
+.data-item p {
+    margin-left: 0.4rem;
+}
+
+.data-item:hover {
+    background-color: #464340;
+}
+
+.clear-button {
+    cursor: pointer;
+}
+
 /* start main */
 
 .main {
@@ -219,5 +250,5 @@ li {
 }
 
 .watermark a:hover {
-    color: #D0CF73;
+    color: #FFFF79;
 }
