--- a/final-react/public/style/style.css
+++ b/final-react/public/style/style.css
@@ -169,6 +169,20 @@ li {
     margin-bottom: 4%;
 }
 
+.bs-card-single {
+    background-color: #343235;
+    border-radius: 2%;
+    color: #D9CECA;
+    margin-left: 2%;
+    margin-bottom: 4%;
+    margin-top: 1%;
+}
+
+.single-img {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
 .card-title {
     color: #FFFF79;
 }
